# pytest-deprecator

./: README.md  pyproject.toml
example/: pyproject.toml
example/tests/: test_example.py
src/pytest_deprecator/: plugin.py
src/pytest_deprecator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
