[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-deprecator"
description = "A pytest plugin to aid in incremental refactoring. Allows a setting to be added tp pyproject.toml so specify an acceptable number of a DeprecationWarning"
version = "0.0.3"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["pytest>=6.2.0"]
[project.urls]
Repository = "https://github.com/scaryclam/pytest-deprecator"
[project.entry-points.pytest11]
deprecator-pytest = "pytest_deprecator.plugin"
